--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,3 +18,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    # Make OrderManager public for testing
+    App\Service\OrderManager:
+        public: true
