--- a/.env
+++ b/.env
@@ -39,3 +39,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+IDE_CONFIG="phpstorm://open?file=%f&line=%l&/var/www/html/>/home/paul/projects/suivi-plaidoyer/"
