feat: la gestion des engagements par les listes est accessible via un hash dans l'url

--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,4 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app_test?serverVersion=16&charset=utf8"
+URI_SIGNER_SECRET='test-secret-for-uri-signing'
