--- a/.env
+++ b/.env
@@ -41,3 +41,4 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 IDE_CONFIG="phpstorm://open?file=%f&line=%l&/var/www/html/>/home/paul/projects/suivi-plaidoyer/"
+URI_SIGNER_SECRET='test-secret-for-uri-signing'
