--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,6 +38,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/public/batch-commitment, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_USER }
         - { path: ^/admin/user, roles: ROLE_SUPER_ADMIN }
 
