--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    # Secret pour UriSigner - sécurise l'accès public à la route batch commitment
+    # IMPORTANT: Changez cette valeur en production avec un secret fort et unique
+    app.uri_signer_secret: '%env(default:default_uri_secret:URI_SIGNER_SECRET)%'
+    default_uri_secret: 'CHANGE_ME_IN_PRODUCTION_WITH_STRONG_SECRET'
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +26,8 @@ services:
     # Make OrderManager public for testing
     App\Service\OrderManager:
         public: true
+
+    # Configuration UriSigner pour sécuriser les URLs publiques
+    Symfony\Component\HttpFoundation\UriSigner:
+        arguments:
+            $secret: '%app.uri_signer_secret%'
