--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # define your env variables for the test env here
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='$ecretf0rt3st'
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app_test?serverVersion=16&charset=utf8"
+DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app_test?serverVersion=8.0.32&charset=utf8mb4"
 URI_SIGNER_SECRET='test-secret-for-uri-signing'
