--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "^4.27.4",
         "phpdocumentor/reflection-docblock": "^5.6.4",
         "phpstan/phpdoc-parser": "^2.3",
+        "symfony/apache-pack": "*",
         "symfony/asset": "7.3.*",
         "symfony/asset-mapper": "7.3.*",
         "symfony/console": "7.3.*",
